Enhance guidance and formatting in Entry and Updates sections
- Update the description in the HMIS Release of Information form to include instructions for saving as an attachment under the Participant Profile.
- Improve the clarity and structure of the updates page by adding emphasis to key guidance points and separating content into distinct paragraphs for better readability.
- Remove redundant content regarding the streamlined assessment process to maintain focus on essential information about assessment requirements.

--- a/Entry/index.html
+++ b/Entry/index.html
@@ -689,7 +689,7 @@
                 <div class="forms-grid">
                     <div class="form-card">
                         <div class="form-title">Signed HMIS Release of Information</div>
-                        <div class="form-description">Required by parent/self if the entrant is an adult (at the time of entry).</div>
+                        <div class="form-description">Required by parent/self if the entrant is an adult (at the time of entry). <span style="background: rgba(0,123,255,0.15); padding: 2px 6px; border-radius: 4px; font-weight: 600;">Save as an attachment under the Participant Profile</span></div>
                         <a href="/HMISROI.pdf" class="form-guide-link" target="_blank">
                             📋 Current HMIS Release of Information
                         </a>
