--- a/updates/index.html
+++ b/updates/index.html
@@ -564,7 +564,14 @@
           Update Assessment Overview
         </h2>
         <p>
-          This page outlines what must be updated during a project stay to keep HUD data accurate and current. Use this guidance whenever any of the following occur: income changes, employment status changes, non-cash benefit changes, health insurance changes, domestic violence status changes, when a minor child enters or leaves the household changing total household income, when a youth turns 18, or when income shifts between household members. Additionally, updates are recommended when there are changes in substance use, physical disability, developmental disability, chronic health condition, or mental health disorder. These rules apply throughout the stay and ensure that the HMIS record remains complete and compliant with HUD standards.
+          This page outlines what must be updated during a project stay to keep HUD data accurate and current.<br>
+          <strong>Use this guidance whenever any of the following occur:</strong><br>
+          income changes, employment status changes, non-cash benefit changes, health insurance changes, domestic violence status changes, when a minor child enters or leaves the household changing total household income, when a youth turns 18, or when income shifts between household members.<br>
+          <em>Additionally, updates are recommended when there are changes in</em> substance use, physical disability, developmental disability, chronic health condition, or mental health disorder.<br>
+          These rules apply throughout the stay and ensure that the HMIS record remains complete and compliant with HUD standards.
+        </p>
+        <p>
+          The assessment form in Apricot has been updated to allow updates for specific elements, eliminating the need to complete the entire form when changes occur. When an update assessment is selected, a brief version of this guidance is presented, along with choices for which sections you would like to update. In some situations, such as a child becoming an adult, some sections may be required even if no changes occurred.
         </p>
       </div>
 
@@ -647,17 +654,6 @@
       <div class="process-step">
         <h2>
           <span class="step-number">6</span>
-          Streamlined Assessment Process
-        </h2>
-        <p>
-          The assessment form in Apricot has been updated to allow updates for specific elements, eliminating the need to complete the entire form when changes occur. When an update assessment is selected, a brief version of this guidance is presented, along with choices for which sections you would like to update. In some situations, such as a child becoming an adult, some sections may be required even if no changes occurred.
-        </p>
-      </div>
-      
-      <!-- Step 7 -->
-      <div class="process-step">
-        <h2>
-          <span class="step-number">7</span>
           18th Birthday Assessment Requirements
         </h2>
         <p>When a child in the household turns 18, specific assessment sections are mandatory regardless of whether changes have occurred.</p>
@@ -677,7 +673,7 @@
         <div class="alert-icons">⚠️</div>
         <div class="alert-text">Timeliness for Update Assessments</div>
         <p>
-          Our local HMIS has indicated some limited flexibility for <strong>18th birthday update assessments</strong>; these do not need to be completed within three days of the birthday. That said, please enter the data the month it is requested, treating this as any other Annual Assessment.
+          Our local HMIS has indicated <em>some</em> limited flexibility for <strong>18th birthday update assessments</strong>; these do not need to be completed within three days of the birthday. That said, please enter the data the month it is requested, treating this as any other Annual Assessment.
         </p>
         <p style="margin-top: 0.5rem;">
           For all <strong>other updates</strong> (income, household composition, benefits, insurance, etc.), there is <strong>no change</strong> to expectations: complete updates <strong>within three days</strong> of becoming aware of the change.
