Update emphasis on recommended updates for health-related changes in guidance section

--- a/updates/index.html
+++ b/updates/index.html
@@ -567,7 +567,7 @@
           This page outlines what must be updated during a project stay to keep HUD data accurate and current.<br>
           <strong>Use this guidance whenever any of the following occur:</strong>
           income changes, employment status changes, non-cash benefit changes, health insurance changes, domestic violence status changes, when a minor child enters or leaves the household changing total household income, when a youth turns 18, or when income shifts between household members.<br>
-          <em>Additionally, updates are recommended when there are changes in</em> substance use, physical disability, developmental disability, chronic health condition, or mental health disorder.<br>
+          <strong>Additionally, updates are recommended when there are changes in</strong> substance use, physical disability, developmental disability, chronic health condition, or mental health disorder.<br>
           These rules apply throughout the stay and ensure that the HMIS record remains complete and compliant with HUD standards.
         </p>
         <p>
