Enhance exit page

--- a/Exit/index.html
+++ b/Exit/index.html
@@ -444,7 +444,8 @@
                     <span class="step-number">1</span>
                     Be prepared to exit outgoing residents
                 </h2>
-                <p>Upon receiving the information that a resident will be leaving, prepare plans to complete the required exit interview.</p>
+                <p>When you learn that a resident will be leaving, begin preparing for the required exit interview. The exit procedure is similar for both whole family and individual exits.</p>
+                <p><strong>Key Point:</strong> You only need to complete "Exit" Child/Adult Assessment forms for the family members who are actually leaving.</p>
             </div>
 
             <div class="process-arrow">
@@ -462,7 +463,7 @@
                 <div class="forms-grid">
                     <div class="form-card">
                         <div class="form-title">Occupancy/Departure Form</div>
-                        <div class="form-description">Available in Apricot (at the time of exit). <span style="background: rgba(0,123,255,0.15); padding: 2px 6px; border-radius: 4px; font-weight: 600;">Found under Household Profile</span></div>
+                        <div class="form-description">Only need to complete one per family. Available in Apricot (at the time of exit). <span style="background: rgba(0,123,255,0.15); padding: 2px 6px; border-radius: 4px; font-weight: 600;">Found under Household Profile</span></div>
                         <a href="/Occupancy Departure Guide.pdf" class="form-guide-link" target="_blank">
                             📋 Occupancy/Departure Guide
                         </a>
@@ -471,7 +472,7 @@
                     <div class="form-card">
                         <div class="form-title">Exit Child/Adult Assessment</div>
                         <div class="form-description">
-                            Available in Apricot <strong>for ALL individuals</strong> in the household. 
+                            Must be completed for each individual. Available in Apricot <strong>for ALL individuals</strong> in the household. 
                             <span style="background: rgba(0,123,255,0.15); padding: 2px 6px; border-radius: 4px; font-weight: 600;">
                                 Found under Participant Profile
                             </span>
@@ -494,7 +495,7 @@
                     
                     <div class="form-card">
                         <div class="form-title">Exit from Homeless Housing Datasheet</div>
-                        <div class="form-description">Available in Apricot (at time of exit). <span style="background: rgba(0,123,255,0.15); padding: 2px 6px; border-radius: 4px; font-weight: 600;">Found under Household Profile</span></div>
+                        <div class="form-description">One for the whole family. Available in Apricot (at time of exit). <span style="background: rgba(0,123,255,0.15); padding: 2px 6px; border-radius: 4px; font-weight: 600;">Found under Household Profile</span></div>
                         <a href="/Exit from Homeless Housing Datasheet Guide2.pdf" class="form-guide-link" target="_blank">
                             📋 Exit from Homeless Housing Datasheet Guide
                         </a>
