Update exit page to clarify data team notification process

--- a/Exit/index.html
+++ b/Exit/index.html
@@ -513,9 +513,9 @@
             <div class="process-step">
                 <h2>
                     <span class="step-number">3</span>
-                    Notify the Data Team
+                    Data Team is Notified
                 </h2>
-                <p>When a family is exiting, the data team will be automatically notified.</p>
+                <p>When a family is exited, the data team will be automatically notified, and will follow up with any questions.</p>
             </div>
 
             <div class="process-arrow">
