Add notice box to Entry and Exit pages for data entry expectations

--- a/Entry/index.html
+++ b/Entry/index.html
@@ -742,6 +742,12 @@
                         </div>
                     </div>
                 </div>
+                
+                <div class="notice-box" style="margin-top: 1.5rem;">
+                    <i class="fas fa-exclamation-triangle"></i>
+                    The data entry expectation is that all forms are entered within 72 hours of data collection and/or the date of housing change (whichever is earlier), to allow adequate time for data to be replicated into HMIS.
+                </div>
+                
                 <img src="/ChatGPT Image Jul 16, 2025, 01_23_52 PM.png" alt="Submit Documents Image" class="scaled-image" style="width: 38%; max-width: 300px; box-shadow: none;"/>
             </div>
 
