--- a/Exit/index.html
+++ b/Exit/index.html
@@ -212,10 +212,12 @@
             max-width: 600px;
             display: flex;
             align-items: center;
+            justify-content: center;
             gap: 0.75rem;
             font-weight: 500;
             color: #cc0000;
             box-shadow: 0 2px 8px rgba(255, 68, 68, 0.2);
+            text-align: center;
         }
         .notice-box i {
             font-size: 1.2rem;
