Update header text in updates page to clarify assessment guidelines

--- a/updates/index.html
+++ b/updates/index.html
@@ -549,7 +549,7 @@
           <i class="fas fa-edit"></i>
         </div>
         <div class="header-text-area">
-          <h1>Update Assessments, and Whole Family Move-in Guidelines</h1>
+          <h1>Move-In/Entry Assessments and Update Assessments</h1>
           <div class="subtitle">Family Move-in and update assessment procedures according to HUD standards</div>
         </div>
       </div>
