Add legend icon for out-of-date files

--- a/checklist.html
+++ b/checklist.html
@@ -225,6 +225,12 @@
             animation: check-pop 0.3s ease;
         }
 
+        .review-icon {
+            color: #6f42c1;
+            font-size: 1.5rem;
+            animation: check-pop 0.3s ease;
+        }
+
         .empty-cell {
             color: #dee2e6;
             font-size: 1.2rem;
@@ -477,6 +483,10 @@
                 <span class="legend-item">
                     <i class="fas fa-asterisk conditional-icon"></i>
                     <span>= Required Under Some Conditions</span>
+                </span>
+                <span class="legend-item">
+                    <i class="fa-solid fa-info review-icon"></i>
+                    <span>= Check File, Required if Out of Date</span>
                 </span>
                 <span class="legend-item">
                     <i class="fas fa-circle empty-cell"></i>
