Contact data team for child entries

--- a/checklist.html
+++ b/checklist.html
@@ -607,7 +607,7 @@
                     </tr>
                     <tr>
                         <th>Contact Data Team for Assistance</th>
-                        <td><i class="fas fa-circle empty-cell"></i></td>
+                        <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
