--- a/checklist.html
+++ b/checklist.html
@@ -586,7 +586,7 @@
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
-                        <td><i class="fas fa-circle empty-cell"></i></td>
+                        <td><i class="fa-solid fa-info review-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
@@ -600,7 +600,7 @@
                         <td><i class="fas fa-asterisk conditional-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
-                        <td><i class="fas fa-circle empty-cell"></i></td>
+                        <td><i class="fa-solid fa-info review-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
