--- a/checklist.html
+++ b/checklist.html
@@ -694,7 +694,7 @@
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
-                        <td><i class="fas fa-check-circle check-icon"></i></td>
+                        <td><i class="fas fa-asterisk conditional-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
