Update print text: change 'Conditional' to 'Conditionally Required'

--- a/checklist.html
+++ b/checklist.html
@@ -807,7 +807,7 @@
                     if (cell.querySelector('.check-icon')) {
                         return { text: 'Required', class: 'required' };
                     } else if (cell.querySelector('.conditional-icon')) {
-                        return { text: 'Conditional', class: 'conditional' };
+                        return { text: 'Conditionally Required', class: 'conditional' };
                     } else if (cell.querySelector('.review-icon')) {
                         return { text: 'Review if Out of Date', class: 'review' };
                     } else {
