Move Turned 18 to Enrolled Scenarios section and rename from Update & Check-in

--- a/apricot_versions/checklist_bulletin.html
+++ b/apricot_versions/checklist_bulletin.html
@@ -22,10 +22,10 @@ p.half-height{margin:0;padding:0.5em 0;}
 <div class="scenario"><h3>Individual Newborn/Child Entry</h3><ul><li class="req">Child/Adult Assessment</li><li class="req">Occupancy/Departure Form</li><li class="req">HMIS ROI</li><li class="req">Housing Hope ROI</li><li class="req">Contact Data Team</li></ul></div>
 <div class="scenario"><h3>Individual Adult Entry</h3><ul><li class="req">Child/Adult Assessment</li><li class="req">Occupancy/Departure Form</li><li class="req">Fenn-Jorstad Self-Sufficiency Matrix</li><li class="req">HMIS ROI</li><li class="req">Housing Hope ROI</li><li class="req">Contact Data Team</li></ul></div>
 <div class="scenario"><h3>Family Entry</h3><ul><li class="cond">Child/Adult Assessment *</li><li class="req">Occupancy/Departure Form</li><li class="cond">Fenn-Jorstad Self-Sufficiency Matrix *</li><li class="req">Housing Stability Plan</li><li class="req">HMIS ROI</li><li class="req">Housing Hope ROI</li></ul></div>
-<div class="scenario"><h3>Turned 18</h3><ul><li class="req">Child/Adult Assessment</li><li class="req">Fenn-Jorstad Self-Sufficiency Matrix</li><li class="req">HMIS ROI</li><li class="cond">Housing Hope ROI *</li></ul></div>
 </div>
 <div class="section">
-<h2>UPDATE & CHECK-IN</h2>
+<h2>ENROLLED SCENARIOS</h2>
+<div class="scenario"><h3>Turned 18</h3><ul><li class="req">Child/Adult Assessment</li><li class="req">Fenn-Jorstad Self-Sufficiency Matrix</li><li class="req">HMIS ROI</li><li class="cond">Housing Hope ROI *</li></ul></div>
 <div class="scenario"><h3>Update (Income/Status)</h3><ul><li class="req">Child/Adult Assessment</li></ul></div>
 <div class="scenario"><h3>Quarterly Check-in</h3><ul><li class="req">Housing Stability Plan</li></ul></div>
 <div class="scenario"><h3>Enrollment Anniversary</h3><ul><li class="req">Child/Adult Assessment</li><li class="cond">Fenn-Jorstad Self-Sufficiency Matrix *</li><li class="rev">HMIS ROI ⚠</li><li class="rev">Housing Hope ROI ⚠</li></ul></div>
