--- a/apricot_versions/checklist_bulletin.html
+++ b/apricot_versions/checklist_bulletin.html
@@ -1,6 +1,6 @@
 <style type="text/css">
 p.half-height{margin:0;padding:0.5em 0;}
-.checklist-bulletin{font-family:Arial,sans-serif;max-width:100%;padding:0 15px;}
+.checklist-bulletin{font-family:Arial,sans-serif;max-width:100%;padding:15px;}
 .checklist-bulletin .sections-container{display:flex;gap:20px;justify-content:center;}
 .checklist-bulletin .section{flex:1;min-width:250px;max-width:350px;}
 .checklist-bulletin .scenario{background:#f5f5f5;border-left:4px solid #3498db;padding:8px 12px;margin:8px 0;}
