--- a/apricot_versions/checklist_bulletin.html
+++ b/apricot_versions/checklist_bulletin.html
@@ -39,6 +39,6 @@ p.half-height{margin:0;padding:0.5em 0;}
 </div>
 <p class="half-height"></p>
 <div style="text-align:right;margin-top:15px;">
-<a href="/checklist.html" style="padding:10px 20px;background-color:#3498db;color:white;text-decoration:none;border-radius:5px;cursor:pointer;font-size:16px;display:inline-block;transition:background-color 0.3s;" onmouseover="this.style.backgroundColor='#2980b9'" onmouseout="this.style.backgroundColor='#3498db'">Read more on our website ➜</a>
+<a href="https://housinghopedatateam.cfd/checklist.html" style="padding:10px 20px;background-color:#3498db;color:white;text-decoration:none;border-radius:5px;cursor:pointer;font-size:16px;display:inline-block;transition:background-color 0.3s;" onmouseover="this.style.backgroundColor='#2980b9'" onmouseout="this.style.backgroundColor='#3498db'">Read more on our website ➜</a>
 </div>
 </div>
