--- a/apricot_versions/checklist_bulletin.html
+++ b/apricot_versions/checklist_bulletin.html
@@ -15,7 +15,7 @@ p.half-height{margin:0;padding:0.5em 0;}
 </style>
 <div class="checklist-bulletin">
 <h1>Assessment & Paperwork Requirements</h1>
-<div class="legend"><strong>Legend:</strong> <span class="req">✓ Required</span> | <span class="cond">* Conditional</span> | <span class="rev">⚠ Review if Out of Date</span></div>
+<div class="legend"><strong>Legend:</strong> <span class="req">✓ Required</span> | <span class="cond">* Conditionally Required</span> | <span class="rev">⚠ Review if Out of Date</span></div>
 <div class="sections-container">
 <div class="section">
 <h2>ENTRY SCENARIOS</h2>
