--- a/checklist.html
+++ b/checklist.html
@@ -716,7 +716,7 @@
                         <th><a href="/HMISROI.pdf" target="_blank">HMIS Release of Information (ROI)</a></th>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
-                        <td><i class="fas fa-check-circle check-icon"></i></td>
+                        <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
@@ -729,7 +729,7 @@
                         <th><a href="/Housing-Hope-ROI.docx" target="_blank">Housing Hope ROI</a></th>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
                         <td><i class="fas fa-check-circle check-icon"></i></td>
-                        <td><i class="fas fa-check-circle check-icon"></i></td>
+                        <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-asterisk conditional-icon"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
                         <td><i class="fas fa-circle empty-cell"></i></td>
